Footer Code Updated

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -15,21 +15,30 @@
 <body>
 
 
-  <main></main>
+    <main></main>
 
-    <!-- ================= FOOTER ================= -->
+    <!-- Footer Start -->
     <footer class="footer-section">
-        <!-- Background -->
-        <div class="footer-bg">
-        </div>
+        <div class="footer-bg"></div>
 
-        <!-- Main Wrapper -->
         <div class="footer-main-wrapper">
+            <div class="copyright">
+                <p>All Right Reserved &copy; 2025</p>
+            </div>
 
-    
-
+            <div class="footer-menu">
+                <ul>
+                    <li>About Us</li>
+                    <li>Our Team</li>
+                    <li>Testimonials</li>
+                    <li>Careers</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </div>
     </footer>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
