--- a/pages/index.html
+++ b/pages/index.html
@@ -161,15 +161,211 @@
                     </h1>
                     <div class="banner-content-one">
                         <p>
-                            We are your dedicated, multi-service partner focused on optimizing the critical layers of your business. We deliver world-class management solutions across three core areas: Marketing, Supply Chain, and Warehouse Operations. 
+                            We are your dedicated, multi-service partner focused on optimizing the critical layers of
+                            your business. We deliver world-class management solutions across three core areas:
+                            Marketing, Supply Chain, and Warehouse Operations.
                         </p>
                         <p>
-                            We are proud to have partnered with some of India’s most renowned business houses, including <strong>Balaji Wafers, Vadilal Ice-Cream, and Coca-Cola.</strong> Our track record speaks for itself.
+                            We are proud to have partnered with some of India’s most renowned business houses, including
+                            <strong>Balaji Wafers, Vadilal Ice-Cream, and Coca-Cola.</strong> Our track record speaks
+                            for itself.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- ===== SERVICES ACCORDION SECTION ===== -->
+        <section class="bg-white pt-40 pb-12 md:pt-40 md:pb-16">
+            <div class="max-w-6xl xl:max-w-7xl mx-auto px-4 md:px-6 lg:px-0">
+                <!-- Accordion row -->
+                <div class="md:h-[700px] flex flex-col md:flex-row gap-4 group">
+
+                    <!-- CARD 1 (default open) -->
+                    <article class="relative h-[320px] md:h-full rounded-[10px] overflow-hidden bg-gray-400
+                         flex-1 md:flex-[2]
+                         transition-[flex] duration-500 ease-out
+                         md:group-hover:flex-[0.7] md:hover:flex-[2.3]">
+
+                        <!-- Image -->
+                        <img src="../assets/images/Marketing.webp" alt="Marketing & Product Promotion" class="absolute inset-0 w-full h-full object-cover
+                           transition-transform duration-500
+                           md:group-hover:scale-105 md:hover:scale-110" />
+
+                        <!-- Gradient overlay (15% to 80% like Figma) -->
+                        <div class="absolute inset-0
+                           bg-[linear-gradient(90deg,rgba(0,0,0,0.8)_0%,rgba(0,0,0,0.5)_45%,rgba(0,0,0,0.15)_75%,rgba(0,0,0,0)_100%)]
+                           transition-opacity duration-300
+                           md:group-hover:opacity-100 md:hover:opacity-90">
+                        </div>
+
+                        <!-- Vertical title -->
+                        <h3 class="absolute left-[25px] top-1/2 -translate-y-1/2 origin-left -rotate-90
+                           text-white font-bold
+                           text-[24px] md:text-[30px] lg:text-[36px] leading-none tracking-tight">
+                            Marketing &amp; Product Promotion
+                        </h3>
+
+                        <!-- Bottom content frame -->
+                        <div class="absolute bottom-[30px] left-[45px]
+                           w-[326px] min-h-[150px]
+                           border border-white/70
+                           px-[26px] py-[22px]
+                           flex flex-col gap-[30px]
+                           text-white">
+
+                            <!-- Number + small label -->
+                            <div class="flex items-end justify-between">
+                                <p class="text-[40px] md:text-[60px] leading-[1.12] font-semibold">
+                                    01
+                                </p>
+                            </div>
+
+                            <!-- Copy -->
+                            <p class="text-[11px] leading-[1.6] opacity-90">
+                                We help brands grow by reaching every corner of the market – from
+                                rural towns to metro cities. Our strong distribution network.
+                            </p>
+
+                            <!-- CTA -->
+                            <button
+                                class="mt-[2px] inline-flex items-center text-[11px] md:text-xs font-medium tracking-[0.16em] uppercase">
+                                View More
+                                <span class="ml-2 text-base leading-none">→</span>
+                            </button>
+                        </div>
+                    </article>
+
+                    <!-- CARD 2 -->
+                    <article class="relative h-[320px] md:h-full rounded-[10px] overflow-hidden bg-gray-400
+                         flex-1 md:flex-[0.9]
+                         transition-[flex] duration-500 ease-out
+                         md:group-hover:flex-[0.7] md:hover:flex-[2.3]">
+
+                        <img src="../assets/images/Supply.webp" alt="Supply Chain Management" class="absolute inset-0 w-full h-full object-cover
+                           transition-transform duration-500
+                           md:group-hover:scale-105 md:hover:scale-110" />
+
+                        <div class="absolute inset-0 bg-[linear-gradient(90deg,rgba(0,0,0,0.8)_0%,rgba(0,0,0,0.5)_60%,rgba(0,0,0,0)_100%)]
+                           transition-colors duration-300">
+                        </div>
+
+                        <!-- Vertical title -->
+                        <h3 class="absolute left-[25px] top-1/2 -translate-y-1/2 origin-left -rotate-90
+                           text-white font-bold
+                           text-base md:text-lg lg:text-xl tracking-tight">
+                            Supply Chain Management
+                        </h3>
+
+                        <!-- Bottom content (hover on desktop) -->
+                        <div class="absolute bottom-6 left-6 right-6 text-white
+                           transition-opacity duration-300
+                           md:opacity-0 md:hover:opacity-100">
+                            <div class="flex items-start gap-4">
+                                <p class="text-3xl md:text-[40px] font-semibold leading-none">
+                                    02
+                                </p>
+                                <div class="w-px h-12 md:h-14 bg-white/70"></div>
+                                <p class="text-[11px] md:text-xs lg:text-sm leading-relaxed max-w-xs">
+                                    Efficient supply chain management ensuring timely delivery and optimal stock
+                                    across all locations.
+                                </p>
+                            </div>
+
+                            <button
+                                class="mt-4 inline-flex items-center text-[11px] md:text-xs lg:text-sm font-medium tracking-[0.16em] uppercase">
+                                View More <span class="ml-2 text-lg leading-none">→</span>
+                            </button>
+                        </div>
+                    </article>
+
+                    <!-- CARD 3 -->
+                    <article class="relative h-[320px] md:h-full rounded-[10px] overflow-hidden bg-gray-400
+                         flex-1 md:flex-[0.9]
+                         transition-[flex] duration-500 ease-out
+                         md:group-hover:flex-[0.7] md:hover:flex-[2.3]">
+
+                        <img src="../assets/images/Product.webp" alt="Product Promotion" class="absolute inset-0 w-full h-full object-cover
+                           transition-transform duration-500
+                           md:group-hover:scale-105 md:hover:scale-110" />
+
+                        <div class="absolute inset-0 bg-[linear-gradient(90deg,rgba(0,0,0,0.8)_0%,rgba(0,0,0,0.5)_60%,rgba(0,0,0,0)_100%)]
+                           transition-colors duration-300">
+                        </div>
+
+                        <h3 class="absolute left-[25px] top-1/2 -translate-y-1/2 origin-left -rotate-90
+                           text-white font-bold
+                           text-base md:text-lg lg:text-xl tracking-tight">
+                            Product Promotion
+                        </h3>
+
+                        <div class="absolute bottom-6 left-6 right-6 text-white
+                           transition-opacity duration-300
+                           md:opacity-0 md:hover:opacity-100">
+                            <div class="flex items-start gap-4">
+                                <p class="text-3xl md:text-[40px] font-semibold leading-none">
+                                    03
+                                </p>
+                                <div class="w-px h-12 md:h-14 bg-white/70"></div>
+                                <p class="text-[11px] md:text-xs lg:text-sm leading-relaxed max-w-xs">
+                                    Targeted product promotion strategies to boost visibility and sales in key markets.
+                                </p>
+                            </div>
+
+                            <button
+                                class="mt-4 inline-flex items-center text-[11px] md:text-xs lg:text-sm font-medium tracking-[0.16em] uppercase">
+                                View More <span class="ml-2 text-lg leading-none">→</span>
+                            </button>
+                        </div>
+                    </article>
+
+                    <!-- CARD 4 -->
+                    <article class="relative h-[320px] md:h-full rounded-[10px] overflow-hidden bg-gray-400
+                         flex-1 md:flex-[0.9]
+                         transition-[flex] duration-500 ease-out
+                         md:group-hover:flex-[0.7] md:hover:flex-[2.3]">
+
+                        <img src="../assets/images/Warehouse.webp" alt="Warehouse Management" class="absolute inset-0 w-full h-full object-cover
+                           transition-transform duration-500
+                           md:group-hover:scale-105 md:hover:scale-110" />
+
+                        <div class="absolute inset-0 bg-[linear-gradient(90deg,rgba(0,0,0,0.8)_0%,rgba(0,0,0,0.5)_60%,rgba(0,0,0,0)_100%)]
+                           transition-colors duration-300">
+                        </div>
+
+                        <h3 class="absolute left-[25px] top-1/2 -translate-y-1/2 origin-left -rotate-90
+                           text-white font-bold
+                           text-base md:text-lg lg:text-xl tracking-tight">
+                            Warehouse Management
+                        </h3>
+
+                        <div class="absolute bottom-6 left-6 right-6 text-white
+                           transition-opacity duration-300
+                           md:opacity-0 md:hover:opacity-100">
+                            <div class="flex items-start gap-4">
+                                <p class="text-3xl md:text-[40px] font-semibold leading-none">
+                                    04
+                                </p>
+                                <div class="w-px h-12 md:h-14 bg-white/70"></div>
+                                <p class="text-[11px] md:text-xs lg:text-sm leading-relaxed max-w-xs">
+                                    Smart warehouse management for safe storage, fast dispatch, and accurate inventory.
+                                </p>
+                            </div>
+
+                            <button
+                                class="mt-4 inline-flex items-center text-[11px] md:text-xs lg:text-sm font-medium tracking-[0.16em] uppercase">
+                                View More <span class="ml-2 text-lg leading-none">→</span>
+                            </button>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
 
 
 
