--- a/pages/index.html
+++ b/pages/index.html
@@ -363,6 +363,137 @@
             </div>
         </section>
 
+        <!-- ===== MAP SECTION ===== -->
+        <section class="location-section">
+            <div class="location-wrapper">
+
+                <div class="space-y-4 sm:space-y-5">
+
+                    <!-- SLIDE 1 -->
+                    <article class="location-slide" data-location-slide>
+                        <div class="location-inner">
+                            <div class="location-card">
+                                <p class="location-badge">Corporate Office</p>
+                                <h3 class="location-title">KATARIA ENTERPRISE</h3>
+                                <p class="location-address">
+                                    Tower Building, Kalawad Road, Vad-Vajdi,<br />
+                                    RAJKOT-360021 (GUJRAT) (INDIA)
+                                </p>
+
+                                <a href="https://maps.app.goo.gl/hrvvperxGkbUhzaN8" target="_blank"
+                                    class="location-directions" rel="noopener">
+                                    <span>Directions</span>
+                                    <span class="text-13">↗</span>
+                                </a>
+                            </div>
+
+                            <div class="location-map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4259.804169447162!2d70.7002834!3d22.260128700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959cc6ec232dc79%3A0x65cf60c02bf30b34!2sKataria%20Enterprise!5e1!3m2!1sen!2sin!4v1764249298126!5m2!1sen!2sin"
+                                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                                    class="w-full aspect-video md:aspect-16/7" title="Kataria Enterprise map">
+                                </iframe>
+                            </div>
+
+                            <!-- Controls: placed AFTER the map in DOM so on mobile they are below the map.
+                         CSS moves them to top-right (absolute) on md+ so they appear parallel to the title. -->
+                            <div class="location-slider-controls" role="group" aria-label="Slide controls">
+                                <button type="button" class="location-slider-btn" data-location-prev
+                                    aria-label="Previous slide">
+                                    <span class="inline-block -translate-x-[1px]">&larr;</span>
+                                </button>
+                                <button type="button" class="location-slider-btn" data-location-next
+                                    aria-label="Next slide">
+                                    <span class="inline-block translate-x-[1px]">&rarr;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+
+                    <!-- SLIDE 2 -->
+                    <article class="location-slide hidden" data-location-slide>
+                        <div class="location-inner">
+                            <div class="location-card">
+                                <p class="location-badge">Branch Office</p>
+                                <h3 class="location-title">KATARIA ENTERPRISE – Ahmedabad</h3>
+                                <p class="location-address">
+                                    Some Tower, Main Road,<br />
+                                    AHMEDABAD-380001 (GUJRAT) (INDIA)
+                                </p>
+
+                                <a href="https://maps.app.goo.gl/hrvvperxGkbUhzaN8" target="_blank"
+                                    class="location-directions" rel="noopener">
+                                    <span>Directions</span>
+                                    <span class="text-13">↗</span>
+                                </a>
+                            </div>
+
+                            <div class="location-map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4259.804169447162!2d70.7002834!3d22.260128700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959cc6ec232dc79%3A0x65cf60c02bf30b34!2sKataria%20Enterprise!5e1!3m2!1sen!2sin!4v1764249298126!5m2!1sen!2sin"
+                                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                                    class="w-full aspect-video md:aspect-16/7"
+                                    title="Kataria Enterprise map - Ahmedabad">
+                                </iframe>
+                            </div>
+
+                            <div class="location-slider-controls" role="group" aria-label="Slide controls">
+                                <button type="button" class="location-slider-btn" data-location-prev
+                                    aria-label="Previous slide">
+                                    <span class="inline-block -translate-x-[1px]">&larr;</span>
+                                </button>
+                                <button type="button" class="location-slider-btn" data-location-next
+                                    aria-label="Next slide">
+                                    <span class="inline-block translate-x-[1px]">&rarr;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+
+                    <!-- SLIDE 3 -->
+                    <article class="location-slide hidden" data-location-slide>
+                        <div class="location-inner">
+                            <div class="location-card">
+                                <p class="location-badge">Warehouse</p>
+                                <h3 class="location-title">KATARIA ENTERPRISE – Warehouse</h3>
+                                <p class="location-address">
+                                    Industrial Area, Plot 12,<br />
+                                    RAJKOT-360021 (GUJRAT) (INDIA)
+                                </p>
+
+                                <a href="https://maps.app.goo.gl/hrvvperxGkbUhzaN8" target="_blank"
+                                    class="location-directions" rel="noopener">
+                                    <span>Directions</span>
+                                    <span class="text-13">↗</span>
+                                </a>
+                            </div>
+
+                            <div class="location-map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4259.804169447162!2d70.7002834!3d22.260128700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959cc6ec232dc79%3A0x65cf60c02bf30b34!2sKataria%20Enterprise!5e1!3m2!1sen!2sin!4v1764249298126!5m2!1sen!2sin"
+                                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                                    class="w-full aspect-video md:aspect-16/7"
+                                    title="Kataria Enterprise map - Warehouse">
+                                </iframe>
+                            </div>
+
+                            <div class="location-slider-controls" role="group" aria-label="Slide controls">
+                                <button type="button" class="location-slider-btn" data-location-prev
+                                    aria-label="Previous slide">
+                                    <span class="inline-block -translate-x-[1px]">&larr;</span>
+                                </button>
+                                <button type="button" class="location-slider-btn" data-location-next
+                                    aria-label="Next slide">
+                                    <span class="inline-block translate-x-[1px]">&rarr;</span>
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+
+                </div> <!-- /.slides -->
+            </div> <!-- /.wrapper -->
+        </section>
+
 
 
 
@@ -370,155 +501,26 @@
 
 
     </main>
-
-    <!-- ================= FOOTER ================= -->
+    <!-- ===== Footer ===== -->
     <footer class="footer-section">
-        <!-- Background -->
-        <div class="footer-bg">
-        </div>
+        <div class="footer-bg"></div>
 
-        <!-- Main Wrapper -->
         <div class="footer-main-wrapper">
-
-            <!-- TOP SECTION -->
-            <div class="top-section-wrapper">
-                <!-- Text -->
-                <div class="max-w-660 text-left">
-                    <h4 class="text-3xl font-bold">Ready To Partner With Us?</h4>
-                    <p class="mt-4 text-15 leading-relaxed">
-                        Join hands with Kataria Enterprise to experience innovative
-                        logistics and supply chain solutions that ensure speed, safety,
-                        and excellence.
-                    </p>
-                </div>
-
-                <!-- Circle Button -->
-                <div class="circle-button-mask">
-                    <a href="/contact">
-                        <img src="../assets/images/curve_text.svg"
-                            class="absolute inset-0 w-full h-full animate-[spin_20s_linear_infinite]" alt="" />
-
-                        <img src="../assets/images/aerrow.svg" class="w-40 h-40 z-10 pointer-events-none" alt="" />
-                    </a>
-                </div>
+            <div class="copyright">
+                <p>All Right Reserved &copy; 2025</p>
             </div>
 
-            <!-- MIDDLE SECTION -->
-            <div class="middle-section-wrapper">
-                <!-- LEFT SIDE -->
-                <div class="left-side">
-                    <img src="../assets/images/footer-logo.svg" class="w-295 h-70 mb-6" alt="" />
-
-                    <p class="max-w-sm text-15 leading-relaxed">
-                        Delivering excellence in distribution, logistics, and product
-                        supply across India. Building trust through quality, speed, and
-                        reliability.
-                    </p>
-
-                    <!-- Social Icons -->
-                    <div class="social-icons-container">
-                        <div class="social-icon group">
-                            <a href="https://www.facebook.com/">
-                                <img src="../assets/images/facebook.png" class="image" />
-                            </a>
-                        </div>
-
-                        <div class="social-icon group">
-                            <a href="https://x.com/">
-                                <img src="../assets/images/x-logo.png" class="image" />
-                            </a>
-                        </div>
-
-                        <div class="social-icon group">
-                            <a href="https://www.youtube.com">
-                                <img src="../assets/images/youtube.png" class="image" />
-                            </a>
-                        </div>
-
-                        <div class="social-icon group">
-                            <a href="https://www.instagram.com">
-                                <img src="../assets/images/instagram.png" class="image" />
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- RIGHT SIDE -->
-                <div class="right-side">
-                    <div class="links-list-wrapper">
-                        <h4>Quick Link</h4>
-                        <ul>
-                            <li>
-                                <a href="/about.html" class="">About Us</a>
-                            </li>
-                            <li>
-                                <a href="/team.html">Our Team</a>
-                            </li>
-                            <li>
-                                <a href="/careers.html">Careers</a>
-                            </li>
-                            <li>
-                                <a href="/contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="links-list-wrapper">
-                        <h4>Services</h4>
-                        <ul>
-                            <li>
-                                <a href="#">FMCG Distribution</a>
-                            </li>
-                            <li>
-                                <a href="#">Cold Chain Logistics</a>
-                            </li>
-                            <li>
-                                <a href="#">Retail Supply Solutions</a>
-                            </li>
-                            <li>
-                                <a href="#">Industrial Product Delivery</a>
-                            </li>
-                            <li>
-                                <a href="#">Warehousing & Transport</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="links-list-wrapper">
-                        <h4>Contact</h4>
-                        <ul>
-                            <li>
-                                <a href="tel:+919876543210">+91 98765 43210</a>
-                            </li>
-                            <li>
-                                <a href="mailto:info@katariaenterprise.com">info@katariaenterprise.com</a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Plot No. 22, GIDC Estate,<br />Junagadh, Gujarat, India
-                                    362001
-                                </a>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
+            <div class="footer-menu">
+                <ul>
+                    <li href="#">About Us</li>
+                    <li href="#">Our Team</li>
+                    <li href="#">Testimonials</li>
+                    <li href="#">Careers</li>
+                    <li href="#">Contact</li>
+                </ul>
             </div>
-
-
-            <!-- BOTTOM BAR -->
-            <div class="bottom-bar-wrapper">
-                <div class="copyright-and-policy-container">
-                    <p>All Right Reserved © 2025</p>
-                    <a href="/privacy.html">
-                        Privacy Policy – Terms & Condition
-                    </a>
-                </div>
-            </div>
-
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="../assets/js/script.js"></script>
