--- a/pages/index2.html
+++ b/pages/index2.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tailwind v4+ Starter</title>
-  <!-- In dev you can link to dist/output.css after build / watch -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link href="../dist/style.css" rel="stylesheet" />
@@ -17,6 +16,89 @@
 
   <main>
 
+    <!-- BRANDS SECTION -->
+    <section class="brands-section">
+      <div class="brands-wrapper">
+
+        <div class="brands-grid">
+
+          <!-- LEFT: heading + cards -->
+          <div class="brands-left">
+
+            <div class="brands-pre">
+              <img src="../assets/images/white-truck.svg" alt="white-truck">
+              <p>BRANDS</p>
+            </div>
+
+            <h2 class="brands-title">Trusted By India’s Leading<br />Names</h2>
+
+            <div class="brands-row-wrap">
+              <div>
+                <!-- spacer -->
+              </div>
+
+              <div class="brands-row-controls" aria-hidden="false">
+                <button id="brands-prev" class="brands-arrow" aria-label="Previous">
+                  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                  </svg>
+                </button>
+
+                <button id="brands-next" class="brands-arrow" aria-label="Next">
+                  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M9 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <div id="brandsCards" class="brands-cards">
+              <!-- Example cards — these will be alternated to red/yellow by JS automatically -->
+              <article class="brand-card">
+                <img class="brand-logo" src="../assets/images/balaji_wefers_logo.png" alt="Balaji logo">
+                <div class="brand-card-title">Balaji Wafers</div>
+                <div class="brand-card-desc">Kataria Constantly Trying To Find Ways To Improve Performance.</div>
+              </article>
+
+              <article class="brand-card">
+                <img class="brand-logo" src="../assets/images/balaji_namkeen_logo.png" alt="Balaji Namkeen">
+                <div class="brand-card-title">Balaji Wafers &amp; Namkeen</div>
+                <div class="brand-card-desc">When Considering The Level Of Effort Involved.</div>
+              </article>
+
+              <article class="brand-card">
+                <img class="brand-logo" src="../assets/images/vadilal_ice_cream_logo.png" alt="Vadilal">
+                <div class="brand-card-title">Vadilal ICE–CREAM</div>
+                <div class="brand-card-desc">Kataria Constantly Trying To Find Ways To Improve Performance.</div>
+              </article>
+
+              <article class="brand-card">
+                <img class="brand-logo" src="../assets/images/cocacola_brand_logo.png" alt="CocaCola">
+                <div class="brand-card-title">CocaCola</div>
+                <div class="brand-card-desc">Warehouse Layout Is Also Important In Achieve Greater.</div>
+              </article>
+            </div>
+
+            <div class="brands-cta">Let’s Drive Success Through Logistics. <span class="underline">Get Free Quote</span>
+            </div>
+          </div>
+
+          <!-- RIGHT: placeholder panel -->
+          <div class="brands-right">
+            <div class="brands-placeholder-inner">
+              <div class="brands-placeholder">Brand-partners (placeholder)</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Brands Section End -->
+
+
+
+
 
 
 
@@ -25,7 +107,6 @@
     <section class="location-section">
       <div class="location-wrapper">
 
-        <!-- Slides viewport & track (sliding) -->
         <div class="location-slides-viewport">
           <div class="location-slides-track">
 
@@ -110,10 +191,9 @@
               </div>
             </article>
 
-          </div><!-- /.location-slides-track -->
-        </div><!-- /.location-slides-viewport -->
+          </div>
+        </div>
 
-        <!-- SINGLE CONTROLS (outside the sliding track — this is KEY) -->
         <div class="location-slider-controls" role="group" aria-label="Slide controls">
           <button type="button" class="location-slider-btn" data-location-prev aria-label="Previous slide">
             <span class="inline-block -translate-x-[1px]">&larr;</span>
@@ -123,15 +203,9 @@
           </button>
         </div>
 
-      </div><!-- /.location-wrapper -->
+      </div>
     </section>
     <!-- Map Section End -->
-
-    <!-- Map Section End -->
-
-
-
-
 
   </main>
 
@@ -156,8 +230,7 @@
       </div>
     </div>
   </footer>
-
-
+  <!-- Footer End -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
