update code  our brands

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -16,88 +16,120 @@
 
   <main>
 
-    <!-- BRANDS SECTION -->
-    <section class="brands-section">
-      <div class="brands-wrapper">
 
-        <div class="brands-grid">
 
-          <!-- LEFT: heading + cards -->
-          <div class="brands-left">
+    <!-- Brand Slider Section -->
 
-            <div class="brands-pre">
-              <img src="../assets/images/white-truck.svg" alt="white-truck">
-              <p>BRANDS</p>
-            </div>
+    <section class="brand-section">
+      <div class="brand-main-wrapper bg-track">
 
-            <h2 class="brands-title">Trusted By India’s Leading<br />Names</h2>
+        <div class="left-wrapper">
+          <div class="inner-wrapper">
 
-            <div class="brands-row-wrap">
-              <div>
-                <!-- spacer -->
+
+            <div class="heading-wrapper">
+
+              <div class="pre-heading">
+                <img class="w-22 h-22" src="../assets/images/white-truck.svg" alt="">
+                <span class="uppercase text-14 font-body text-white">BRANDS</span>
               </div>
 
-              <div class="brands-row-controls" aria-hidden="false">
-                <button id="brands-prev" class="brands-arrow" aria-label="Previous">
-                  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                    <path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                  </svg>
-                </button>
+              <h2 class="font-heading text-44 text-white max-w-609">Trusted by India’s Leading Names</h2>
+            </div>
 
-                <button id="brands-next" class="brands-arrow" aria-label="Next">
-                  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                    <path d="M9 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                  </svg>
-                </button>
+
+            <div class="brand-slider-wrapper ">
+
+              <div class="slider-inner-wrapper">
+
+
+
+                <div class="slide-wrapper">
+
+                  <div class="flex flex-row gap-10 justify-end h-50 items-start">
+                    <span><img src="../assets/images/left-slide-arrow.svg" alt="right-slide"></span>
+                    <span><img src="../assets/images/right-slide-arrow.svg" alt="left-slide"></span>
+                  </div>
+
+
+                  <!-- slide 1 -->
+                  <div class="slide">
+
+                    <div class="brand-box-red">
+
+                      <img src="../assets/images/balaji_namkeen_logo.png" alt="Brand Logo 1">
+                      <div class="gap-11">
+                        <h4 class="font-heading  text-20 font-semibold">Balaji Wafers</h4>
+                        <p class="font-heading  text-14 font-normal">Kataria constantly trying to find ways to improve
+                          performance
+                        </p>
+                      </div>
+
+                    </div>
+
+                    <div class="brand-box-yellow">
+
+                      <img src="../assets/images/balaji_namkeen_logo.png" alt="Brand Logo 1">
+                      <div class="gap-11">
+                        <h4 class="font-heading text-20 font-semibold">Balaji Wafers</h4>
+                        <p class="font-heading text-14 font-normal">Kataria constantly trying to find ways to improve
+                          performance
+                        </p>
+                      </div>
+
+                    </div>
+                     <div class="brand-box-yellow">
+
+                      <img src="../assets/images/balaji_namkeen_logo.png" alt="Brand Logo 1">
+                      <div class="gap-11">
+                        <h4 class="font-heading text-20 font-semibold">Balaji Wafers</h4>
+                        <p class="font-heading text-14 font-normal">Kataria constantly trying to find ways to improve
+                          performance
+                        </p>
+                      </div>
+
+                    </div>
+
+                       <div class="brand-box-red">
+
+                      <img src="../assets/images/balaji_namkeen_logo.png" alt="Brand Logo 1">
+                      <div class="gap-11">
+                        <h4 class="font-heading  text-20 font-semibold">Balaji Wafers</h4>
+                        <p class="font-heading  text-14 font-normal">Kataria constantly trying to find ways to improve
+                          performance
+                        </p>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
+
               </div>
             </div>
 
-            <div id="brandsCards" class="brands-cards">
-              <!-- Example cards — these will be alternated to red/yellow by JS automatically -->
-              <article class="brand-card">
-                <img class="brand-logo" src="../assets/images/balaji_wefers_logo.png" alt="Balaji logo">
-                <div class="brand-card-title">Balaji Wafers</div>
-                <div class="brand-card-desc">Kataria Constantly Trying To Find Ways To Improve Performance.</div>
-              </article>
-
-              <article class="brand-card">
-                <img class="brand-logo" src="../assets/images/balaji_namkeen_logo.png" alt="Balaji Namkeen">
-                <div class="brand-card-title">Balaji Wafers &amp; Namkeen</div>
-                <div class="brand-card-desc">When Considering The Level Of Effort Involved.</div>
-              </article>
-
-              <article class="brand-card">
-                <img class="brand-logo" src="../assets/images/vadilal_ice_cream_logo.png" alt="Vadilal">
-                <div class="brand-card-title">Vadilal ICE–CREAM</div>
-                <div class="brand-card-desc">Kataria Constantly Trying To Find Ways To Improve Performance.</div>
-              </article>
-
-              <article class="brand-card">
-                <img class="brand-logo" src="../assets/images/cocacola_brand_logo.png" alt="CocaCola">
-                <div class="brand-card-title">CocaCola</div>
-                <div class="brand-card-desc">Warehouse Layout Is Also Important In Achieve Greater.</div>
-              </article>
+            <div class="quote-line">
+              <p> Let’s drive success through logistics. </p><a href="./contact.html">Get
+                Free Quote</a>
             </div>
 
-            <div class="brands-cta">Let’s Drive Success Through Logistics. <span class="underline">Get Free Quote</span>
-            </div>
           </div>
 
-          <!-- RIGHT: placeholder panel -->
-          <div class="brands-right">
-            <div class="brands-placeholder-inner">
-              <div class="brands-placeholder">Brand-partners (placeholder)</div>
-            </div>
+        </div>
+
+
+        <div class="right-wrapper">
+
+          <div class="inner-wrapper">
+            <img class="" src="../assets/images/rectangle_placeholder.png" alt="Brand Partners">
+            <span class="absolute top-1/2 left-1/2 right-1/2 bottom-1/2">Brand-partners</span>
           </div>
         </div>
+
       </div>
+
     </section>
-    <!-- Brands Section End -->
-
-
-
 
 
 
